--- a/src/coffee_frontend/src/index.html
+++ b/src/coffee_frontend/src/index.html
@@ -7,6 +7,7 @@
     <base href="/">
 </head>
 <body>
+    <img src="logo.png" alt="DFINITY logo" />
     <div id="app"></div>
 </body>
 <script src="index.jsx"></script>
