Upload chunks works with code from dfinity, showing image still buggy

--- a/src/supply_chain_frontend/src/index.html
+++ b/src/supply_chain_frontend/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,8 +7,11 @@
     <base href="/">
 </head>
 <body>
-    <img src="logo.png" alt="DFINITY logo" />
-    <div id="app"></div>
+    <img src="logo2.svg" alt="DFINITY logo" />
+    <div id="create_node"></div>
+   
 </body>
+
 <script src="index.jsx"></script>
+
 </html>
